Some debugging. Updates to the following functions: AdministratorController.CreateClass() CommonController.GetUser() ProfessorController.CreateAssignmentCategory() ProfessorController.CreateAssignment() ProfessorController.GradeSubmission() ProfessorController.ReCalculateClassGradeForStudent()

--- a/LMS_handout/LMS/Views/Professor/Index.cshtml
+++ b/LMS_handout/LMS/Views/Professor/Index.cshtml
@@ -45,6 +45,7 @@
             alert("An error occured when loading user's information");
           }
           else {
+            //alert(JSON.stringify(data));
             ProfessorInfo.innerText = data.fname + " " + data.lname + "    " + data.uid;
             Department.innerText = "Department: " + data.department;
           }
